--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,9 @@
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-      "src": "python manage.py collectstatic --noinput",
-      "use": "@vercel/static-build",
+      "use": "@vercel/static",
       "config": {
-        "distDir": "staticfiles_build"
+        "distDir": "static"
       }
     }
   ],
