added vercel static files route

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     ],
     "routes": [
       {
+        "src": "/static/(.*)",
+        "dest": "TravelGPT/staticfiles/$1"
+      },
+      {
         "src": "/(.*)",
         "dest": "TravelGPT/wsgi.py"
       }
