--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,11 @@
   "builds": [
     {
       "src": "TravelGPT/wsgi.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-      "src": "python manage.py collectstatic",
+      "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "staticfiles_build"
