--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,9 @@
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
+      "src": "python manage.py collectstatic"
+    },
+    {
       "src": "build.sh",
       "use": "@vercel/static-build",
       "config": {
