--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,7 @@
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-      "src": "python manage.py collectstatic"
-    },
-    {
-      "src": "pip install -r requirements.txt",
+      "src": "build.sh",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "staticfiles_build"
